# c48

./: C48.kdev4  C48.sln  CMakeLists.txt  README.md  c48.vcxproj  c48.vcxproj.filters  main.cpp
c48/: AbstractClassifier.cpp  AbstractClassifier.h  BinC45ModelSelection.cpp  BinC45ModelSelection.h  BinC45Split.cpp  BinC45Split.h  C45ModelSelection.cpp  C45ModelSelection.h  C45PruneableClassifierTree.cpp  C45PruneableClassifierTree.h  C45Split.cpp  C45Split.h  C48.cpp  C48.h  CMakeLists.txt  Classifier.h  ClassifierSplitModel.cpp  ClassifierSplitModel.h  ClassifierTree.cpp  ClassifierTree.h  Distribution.cpp  Distribution.h  EntropyBasedSplitCrit.cpp  EntropyBasedSplitCrit.h  EntropySplitCrit.cpp  EntropySplitCrit.h  GainRatioSplitCrit.cpp  GainRatioSplitCrit.h  InfoGainSplitCrit.cpp  InfoGainSplitCrit.h  ModelSelection.cpp  ModelSelection.h  NBTreeClassifierTree.cpp  NBTreeClassifierTree.h  NBTreeModelSelection.cpp  NBTreeModelSelection.h  NBTreeNoSplit.cpp  NBTreeNoSplit.h  NBTreeSplit.cpp  NBTreeSplit.h  (+10 more)
core/: AbstractInstance.cpp  AbstractInstance.h  Attribute.cpp  Attribute.h  AttributeInfo.h  AttributeMetaInfo.cpp  AttributeMetaInfo.h  AttributeStats.cpp  AttributeStats.h  CMakeLists.txt  Consts.h  ContingencyTables.cpp  ContingencyTables.h  DataSource.cpp  DataSource.h  DenseInstance.cpp  DenseInstance.h  Instance.cpp  Instance.h  Instances.cpp  Instances.h  Matrix.cpp  Matrix.h  NominalAttributeInfo.cpp  NominalAttributeInfo.h  Typedefs.h  Utils.cpp  Utils.h  core.vcxproj  core.vcxproj.filters  statistics.cpp  statistics.h
evaluation/: BatchPredictor.h  CMakeLists.txt  ConfusionMatrix.cpp  ConfusionMatrix.h  CostMatrix.cpp  CostMatrix.h  Estimator.cpp  Estimator.h  EstimatorUtils.cpp  EstimatorUtils.h  Evaluation.cpp  Evaluation.h  IncrementalEstimator.h  KernelEstimator.cpp  KernelEstimator.h  Matrix.cpp  Matrix.h  NominalPrediction.cpp  NominalPrediction.h  NumericPrediction.cpp  NumericPrediction.h  Prediction.cpp  Prediction.h  RectangularVectors.h  ThresholdCurve.cpp  ThresholdCurve.h  TwoClassStats.cpp  TwoClassStats.h  evaluation.vcxproj  evaluation.vcxproj.filters
samples/c48/: sleep.data  sleep.names  sleep.test
samples/j48/: sleep.arff  sleep_test.arff
test/: test.vcxproj  test.vcxproj.filters
